Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar background h-nav-resp">
       <ul class="nav-list v-class-resp" >
-          <div class="logo"><img src="img/logo2.png" alt="Logo here"></div>
+          <div class="logo"><img src="../img/logo2.png" alt="Logo here"></div>
           <li><a href="#about"> Home</a></li>
           <li><a href="#about"> About</a></li>
           <li><a href="#blog"> Blogs</a></li>
